syntax = "proto3";
package tendermint.types;

option go_package = "github.com/dashpay/tenderdash/proto/tendermint/types";

import "gogoproto/gogo.proto";

// CoreChainLock represents a core chain lock for synchronization between state data and core chain
message CoreChainLock {
  option (gogoproto.equal) = true;
  uint32 core_block_height = 1;
  bytes  core_block_hash   = 2;
  bytes  signature         = 3;
}

enum VoteExtensionType {
  // Unsupported
  DEFAULT = 0;
  // Sign canonical form of vote extension and threshold-recover signatures.
  //
  // Deterministic vote extension - each validator in a quorum must provide the same vote extension data.
  THRESHOLD_RECOVER = 1;
  // Sign raw form of vote extension and threshold-recover signatures.
  //
  // Deterministic vote extension - each validator in a quorum must provide the same vote extension data.
  // Use with caution - it can have severe security consequences, like replay attacks.
  //
  // THRESHOLD_RECOVER_RAW alows overriding sign request ID with `sign_request_id` field
  // of ExtendVoteExtension.sign_request_id. If sign_request_id is provided, SHA256(sign_request_id) will be used as
  // a sign request ID.
  //
  // It also changes how threshold-recover signatures are generated. Instead of signing canonical form of
  // threshold-recover signatures, it signs SHA256 of raw form of the vote extension (`ExtendVoteExtension.extension`).
  THRESHOLD_RECOVER_RAW = 2;
}

message VoteExtension {
  VoteExtensionType type      = 1;
  bytes             extension = 2;
  bytes             signature = 3;
  // Sign request ID that will be used to sign the vote extensions.
  // Tenderdash will use checksum of `sign_request_id` when generating quorum signatures of
  // THRESHOLD_RECOVER vote extensions.

  // If not set, Tenderdash will generate it based on height and round.
  //
  // If set, it SHOULD be unique per voting round, and it MUST start with `dpevote` or `\x06plwdtx` string.
  //
  // Use with caution - it can have severe security consequences.
  optional bytes sign_request_id = 4;
}
